<resources>

    <!--
    General strings
    -->
    <string name="app_name">Polygonia</string>
    <string name="back">Back</string>

    <bool name="debug">true</bool>

    <!--
    Strings for menu_fragment
    -->
    <string name="menu_play">Play</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_title">Polygonia</string>
    <string name="menu_about">About</string>
    <string name="menu_stats">Coming Soon</string>

    <!--
    Strings for login fragment
    -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signon_button_text">Sign Up</string>
    <string name="login_text">Login to Polygonia</string>
    <string name="signup_text">Sign Up for Polygonia!</string>
    <string name="LoginStatus">Login Status</string>
    <string name="Loginstatus">Login status</string>
    <string name="signout_text">Sign Out</string>
    <string name="login_status">Login Status</string>
    <string name="status">Not logged in</string>

    <!--
    Strings for play_fragment
    -->
    <string name="gametype_selection">Play Polygonia!</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="watch_game">Watch Other People Play</string>


    <!--
    Strings for settings_fragment
    -->
    <string name="settings_checkbox">Background Music</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">usr</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!--
    Strings for about_fragment
    -->


    <!--
    Strings for tutorial_fragment
    -->

    <!--
    Strings for Game activity & Game support fragments
    -->
    <string name="endturn">End Turn</string>

    <!-- Zoom controls -->
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="zoom_left">L</string>
    <string name="zoom_up">U</string>
    <string name="zoom_down">D</string>
    <string name="zoom_right">R</string>
    <string name="zoom_reset">Center Board</string>

    <!-- Resource transactions -->
    <string name="die">Roll</string>
    <string name="buy">Buy</string>
    <string name="settlement">Buy Settlement</string>
    <string name="house">Buy House</string>
    <string name="city">Buy City</string>
    <string name="road">Buy Road</string>
    <string name="card">Buy Card</string>

    <!-- Resources -->
    <string name="wheat">Wheat: </string>
    <string name="wood" >Wood: </string>
    <string name="ore"  >Ore: </string>
    <string name="brick">Brick: </string>
    <string name="sheep">Sheep: </string>
    <string name="time">Time:</string>
    
    <string name="res_empty">0</string>
    <string name="res_format">%1$d</string>
    
    <!-- player names (trade fragment) -->
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="player3">Player3</string>
    <string name="player4">Player4</string>
    <string name="player5">Player5</string>
    <string name="currentplayer">Current Player: </string>

    <!-- Strings for exit -->
    <string name="exit_text">Exit</string>

</resources>
