<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/player1"
        android:id="@+id/player1"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/player2"
        android:id="@+id/player2"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/player3"
        android:id="@+id/player3"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/player4"
        android:id="@+id/player4"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/player5"
        android:id="@+id/player5"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp" />
</LinearLayout>