<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dip">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu_title"
            android:textColor="#33b5e5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="40"/>

        <Button
            android:id="@+id/PlayButton"
            android:text="@string/menu_play"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/SettingsButton"
            android:text="@string/menu_settings"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/TutorialButton"
            android:text="@string/menu_tutorial"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/AboutButton"
            android:text="@string/menu_about"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/SoonButton"
            android:text="@string/menu_stats"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:layout_gravity="center" />
        </LinearLayout>

</LinearLayout>