<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gametype_selection"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:padding="20dip"
        android:weightSum="160">

        <Button
            android:id="@+id/create_game"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/create_game"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"/>

        <Button
            android:id="@+id/join_game"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/join_game"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"/>

        <Button
            android:id="@+id/watch_game"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/watch_game"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"/>

    </LinearLayout>


</LinearLayout>