<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andumgaming.g370.views.GameTest">

    <!-- Removed these from layout: the padding caused offset errors in board drawing stage -->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->



    <LinearLayout
        android:id="@+id/zoom_control_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom">

        <fragment
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:name="com.example.andumgaming.g370.views.fragments.ActionPanelFragment"
            android:id="@+id/actionpanel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            class="com.example.andumgaming.g370.views.fragments.ActionPanelFragment"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/zoomIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/zoom_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"/>

        <Button
            android:id="@+id/zoomLeft"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/zoom_left"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"/>
        <Button
            android:id="@+id/zoomUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/zoom_up"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"/>



        <Button
            android:id="@+id/zoomReset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/zoom_reset"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/zoomDown"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/zoom_down"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"/>
        <Button
            android:id="@+id/zoomRight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/zoom_right"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"
            android:layout_gravity="bottom" />
        <Button
            android:id="@+id/zoomOut"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/zoom_out"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="20"/>

    </LinearLayout>

    <fragment
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:name="com.example.andumgaming.g370.views.fragments.PlayerStatusesFragment"
        android:id="@+id/playerstatus"
        class="com.example.andumgaming.g370.views.fragments.PlayerStatusesFragment"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
